# bifrons

./: .gitignore  Cargo.toml  README.md  this.modlist.ron
assets/: core.mod.ron  make_ktx2.bat  missing.ktx2
assets/actors/player/: labolas.actor.ron
assets/chars/: labolas.prefab.ron  player.lua  shax.prefab.ron  test_satori.prefab.ron
assets/effects/: explosion_small.ktx2  explosion_small.prefab.ron
assets/items/: cleaver.ktx2  cleaver.lua  cleaver.prefab.ron  lantern.item.ron  lantern.lua  lantern.prefab.ron  shutter_lantern.ktx2  shutter_lantern.png.ktx2.ron
assets/items/food/: tea.item.ron  tea.lua  tea.prefab.ron
assets/levels/main_menu/: lobby.piece.ron  main.lua
assets/levels/pieces/: kitchen.level.ron
assets/levels/testing/: testing_house.level.ron  testing_house.lua
assets/palettes/: aom.palette.ron  black_and_white.palette.ron  default.palette.ron  woodblock.palette.ron
assets/palettes/scripts/: common.lua
assets/pieces/: kitchen.piece.ron
assets/props/: damageable.lua  paper.ktx2  paper_n.ktx2
assets/props/bones/: goat_skull_creepy.ktx2  goat_skull_creepy.prefab.ron
assets/props/furniture/: end_table.gltf  end_table.prefab.ron  painting.lua  painting.prefab.ron  painting_frame.ktx2
assets/props/furniture/paintings/: glasses_hat.png.ktx2.ron  painting.prefab.ron
assets/systems/: content.lua  registry.lua  startup.lua
assets/systems/message_api/: registry.lua
assets/ui/: editor.lua
assets/ui/editor/: tools.lua
assets/ui/editor/tools/: grid_toggle.lua  move.lua  point_placer.lua
assets/weather/: thunder.lua
crates/asset_compiler/: Cargo.toml
crates/asset_compiler/src/: main.rs
docs/: Lua Api Directory.md
docs/lua_api/: Globals.md  Log.md  Math.md  Random.md  UI.md  Var.md
docs/lua_api/types/: Atom.md  Color.md  Entity.md  Font.md  Handle.md  Image.md  Level.md  Material.md  Palette.md  Rgba.md  Script.md  Text.md  TextStyle.md  Time.md  Vec2.md  Vec3.md
mods/editor/: editor.mod.ron
mods/editor/editor/: level.lua  main.lua
mods/editor/editor/tools/: common.lua  grid_toggle.lua  move.lua  point_placer.lua
mods/tutorial_mod/: tutorial_mod.mod.ron
src/: main.rs
src/data/: actor.rs  anim.rs  assetio.rs  font.rs  formlist.rs  geometry.rs  grid.rs  input.rs  item.rs  lang.rs  level.rs  lua.rs  material.rs  mod.rs  module.rs  palette.rs  prefab.rs  rgba.rs  setting.rs  stat.rs
src/scripting/: color.rs  entity.rs  event.rs  file.rs  geometry.rs  level.rs  log.rs  message.rs  mod.rs  query.rs  random.rs  registry.rs  time.rs
src/scripting/bevy_api/: entity.rs  handle.rs  image.rs  math.rs  mod.rs
src/scripting/ui/: atom.rs  elem.rs  font.rs  mod.rs  text.rs
src/system/: action.rs  anim.rs  camera.rs  common.rs  editor.rs  item.rs  level.rs  lua.rs  mod.rs  module.rs  palette.rs  player.rs  prefab.rs  scene.rs  texture.rs  ui.rs
src/util/: collections.rs  mod.rs  serialize.rs
