[package]
name = "bifrons"
version = "0.1.0"
edition = "2021"
license-file = "agpl-3.0.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.1", default-features = false, features = ["animation", "basis-universal", "bevy_asset", "bevy_gilrs", "bevy_gltf", "bevy_scene", "bevy_winit", "ktx2", "render", "png", "serialize", "x11", "zlib", "zstd"] }
bevy_egui = "0.16.1"
bevy-inspector-egui = "0.13.0"
bevy_kira_audio = { version = "0.12.0", features = ["flac", "ogg"] }
bevy_mod_scripting = { path = "crates/bevy_mod_scripting", features = ["lua", "lua_script_api"] } # { git = "https://github.com/makspll/bevy_mod_scripting.git", rev = "781754a7e43730885e58fa89b1f911ae800bf985", features = ["lua", "lua_script_api"] }
bytemuck = "1.12.1"
byteorder = "1.4.3"
copyless = "0.1.5"
derive_more = "0.99.17"
fixedbitset = "0.4.2"
ghost = "0.1.6"
indexmap = { version = "1.9.1", features = ["serde"] }
iyes_loopless = "0.7.1"
mlua = { version = "0.8.4", features = ["lua54", "macros", "serialize", "vendored"] }
once_cell = "1.15.0"
rapier3d = { version = "0.15.0", features = ["simd-stable", "debug-render"] }
ron = "0.8.0"
serde = "1.0.145"
tealr = { version = "0.9.0-alpha3", features = ["mlua_lua54"] }
serde_json = "1.0.87"
rand = "0.8.5"
rand_chacha = "0.3.1"
bevy_rapier3d = "0.18.0"
lazy_static = "1.4.0"
