[package]
name = "bifrons"
version = "0.1.0"
edition = "2021"
license-file = "agpl-3.0.txt"

[dependencies]
bevy = { version = "0.9.1", default-features = false, features = ["animation", "basis-universal", "bevy_asset", "bevy_gilrs", "bevy_gltf", "bevy_scene", "bevy_winit", "ktx2", "render", "png", "serialize", "x11", "zlib", "zstd"] }
bevy_egui = "0.17.1"
bevy-inspector-egui = "0.15.0"
bevy_kira_audio = { version = "0.13.0", features = ["flac", "ogg"] }
bytemuck = "1.12.1"
byteorder = "1.4.3"
copyless = "0.1.5"
derive_more = "0.99.17"
fixedbitset = "0.4.2"
ghost = "0.1.6"
indexmap = { version = "1.9.1", features = ["serde"] }
iyes_loopless = "0.9.1"
mlua = { version = "0.8.6", features = ["lua54", "macros", "send", "serialize", "vendored"] }
once_cell = "1.15.0"
rapier3d = { version = "0.16.1", features = ["simd-stable", "debug-render"] }
bevy_rapier3d = "0.19.0"
ron = "0.8.0"
serde = "1.0.145"
serde_json = "1.0.87"
rand = "0.8.5"
rand_chacha = "0.3.1"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
palette = "0.6.1"
